--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 				<div>
 					If you want the latest version and future update.
 					<br />
-					You can check <a href="https://play.gemtok.live/"><b style="font-weight:bold;">https://play.gemtok.live/</b></a>
+					You can check <a href="https://www.tiktok.com/@tjmalikofficial?_t=ZT-8s4ti2EKqWQ&_r=1"><b style="font-weight:bold;">https://play.gemtok.live/</b></a>
 				</div>
 				<div>
 					<audio id="sfx1" class="d-block">
