--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 									<div class="bottom-content">
 										<div id="textGuess" class="text-guess blink">***</div>
 										<div class="text-caption">👇 More Games 👇</div>
-										<div class="text-caption" style="margin-bottom: 0rem;"><a href="https://tiktok.com/@tjmalikofficial">@tjmalikofficial</a></div>
+										<div class="text-caption" style="margin-bottom: 0rem;"><a href="@tjmalikofficial">@tjmalikofficial</a></div>
 									</div>
 								</div>
 							</td>
